<resources>
    <string name="app_name">Milk Matters</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="education_fragment">Education</string>
    <string name="donation_tracking_fragment">Donation Tracking</string>
    <string name="depot_locator_fragment">Depot Locator</string>
    <string name="home_fragment">Home</string>
    <string name="about_fragment">About</string>
    <string name="become_donor_fragment">Become A Donor</string>
    <string name="news_feed_fragment">News and Events</string>
    <string name="action_log_donation">Record A Donation</string>

    <string name="activity_donation_graph">Donation Graphs</string>

    <!-- About screen strings -->
    <string name="about_heading">Mission</string>
    <string name="about_contact_heading">Contact Us</string>
    <string name="about_text">Milk Matters is a community-based, non-profit breast milk bank that pasteurises and distributes donations of screened breast milk from healthy donors to premature, ill and vulnerable babies whose own mothers cannot supply the breast milk to meet their baby’s needs. Milk Matters also facilitates the setting up of milk banks in health institutions.</string>
    <string name="about_link">  Want to become a donor? </string>
    <string name="telephone">Telephone</string>
    <string name="office_number">Office: 021 659 5599</string>
    <string name="cell_number">Cell: 082 895 8004</string>
    <string name="email">\nEmail</string>
    <string name="email_us">Email Us</string>

    <!-- Depot locator strings -->
    <string name="find_nearest_depot">Find Your Nearest Depot</string>

    <!-- Donation tracker strings -->
    <string name="ml_expressed">You have donated</string>
    <string name="babies_fed">You have fed</string>

    <!-- News feed strings -->
    <string name="show_more">--- Show More ---</string>

    <!-- Milk Matters information -->
    <string name="office">0216595599</string>
    <string name="cell">0828958004</string>
    <string name="email_address">info@milkmatters.org</string>
    <string name="mm_link"><a href="http://milkmatters.org/">http://milkmatters.org/</a></string>

    <!-- Become a donor strings -->
    <string name="str_next">Next Question</string>
    <string name="title_fragment_result">Result</string>

    <!-- Miscellaneous strings -->
</resources>
