<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="com.milkmatters.honoursproject.milkmatters.fragments.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_alignParentTop="true"
            android:id="@+id/about_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/about_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/about_heading"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/about_text"
                    android:layout_below="@id/about_heading"
                    android:id="@+id/about_text" />

                <Button
                    android:id="@+id/about_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/about_link"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"
                    android:layout_below="@id/about_text"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_below="@+id/about_cardview"
            android:id="@+id/about_contact_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/about_contact_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/about_contact_heading"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/about_contact_heading"
                    android:id="@+id/test">

                    <ImageView
                        android:id="@+id/about_mm_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/mm_logo"
                        android:layout_alignParentLeft="true" />

                    <LinearLayout
                        android:id="@+id/contact_linear_layout"
                        android:layout_below="@+id/about_contact_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:layout_toRightOf="@id/about_mm_logo"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telephone"
                            android:textColor="@color/colorLightPink"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telephone_office_cell" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorLightPink"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_address" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/email_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/email_us"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"
                    android:layout_below="@id/test"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

</FrameLayout>
